--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'United States -- Politics and government -- Periodicals'
 - !lcc 'AP'
+- GITenberg
 title: Belford's Magazine, Volume II, No. 8, January, 1889
 url: http://www.gutenberg.org/ebooks/31684
